Fix layout issues of the project add windows

--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/_mycollab.scss
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/_mycollab.scss
@@ -133,11 +133,6 @@ $v-line-height--header:1.5em;
     background-color: $my-panel-background-color;
   }
 
-  .v-window-modalitycurtain {
-    background-color: #666;
-    opacity: 0.8;
-  }
-
   input.v-textfield-pagedtable-pagefield {
     margin-top: 1px;
   }
