--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/_shared.scss
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/_shared.scss
@@ -403,6 +403,9 @@
   div.v-window {
     box-shadow: none;
     border: 1px solid $my-separator-color;
+    .v-panel {
+      box-shadow: none;
+    }
   }
 
   /* Kanban block */
